@@ -28,7 +28,7 @@ use lib qw(lib);
         ::is( $output->{msg}, 'WORLD' );
     }
     sub worker_error { ::fail('Got error?'.@_) }
-    sub worker_done  { ::pass('worker done') }
+    sub worker_finished  { ::pass('worker finished') }
 
     sub worker_started { ::pass('worker started') }
     
